; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_chip.c_is_various_name.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_chip.c_is_various_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@various_names = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [11 x i8] c"Reserved%u\00", align 1
@IS_VARIOUS_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, i32)* @is_various_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @is_various_name(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load i32*, i32** @various_names, align 8
  %9 = call i32 @ARRAY_SIZE(i32* %8)
  %10 = icmp ult i32 %7, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %3
  %12 = load i8*, i8** %4, align 8
  %13 = load i32*, i32** @various_names, align 8
  %14 = load i32, i32* %6, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @strncpy(i8* %12, i32 %17, i64 %18)
  br label %27

20:                                               ; preds = %3
  %21 = load i8*, i8** %4, align 8
  %22 = load i64, i64* %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @IS_VARIOUS_START, align 4
  %25 = add i32 %23, %24
  %26 = call i32 @snprintf(i8* %21, i64 %22, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %20, %11
  %28 = load i8*, i8** %4, align 8
  ret i8* %28
}

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @strncpy(i8*, i32, i64) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
